// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
Array [
  <div
    className="row"
  >
    <div>
      <h3
        className="ui header"
      >
        Files
      </h3>
      <div
        className="ui list"
        role="list"
      >
        <a
          className="item"
          href="file1"
          onClick={[Function]}
          role="listitem"
        >
          file1
        </a>
        <a
          className="item"
          href="file2"
          onClick={[Function]}
          role="listitem"
        >
          file2
        </a>
      </div>
    </div>
  </div>,
  <div
    className="row"
  >
    <div>
      <h3
        className="ui header"
      >
        Links
      </h3>
      <div
        className="ui list"
        role="list"
      >
        <a
          className="item"
          href="link1"
          onClick={[Function]}
          role="listitem"
        >
          link1
        </a>
        <a
          className="item"
          href="link2"
          onClick={[Function]}
          role="listitem"
        >
          link2
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`should render correctly when there are no files 1`] = `
Array [
  <div
    className="row"
  >
    <div>
      <h3
        className="ui header"
      >
        Files
      </h3>
      <div
        className="ui list"
        role="list"
      >
        <a
          className="item"
          href="file1"
          onClick={[Function]}
          role="listitem"
        >
          file1
        </a>
        <a
          className="item"
          href="file2"
          onClick={[Function]}
          role="listitem"
        >
          file2
        </a>
      </div>
    </div>
  </div>,
  <div
    className="row"
  />,
]
`;

exports[`should render correctly when there are no links 1`] = `
Array [
  <div
    className="row"
  />,
  <div
    className="row"
  >
    <div>
      <h3
        className="ui header"
      >
        Links
      </h3>
      <div
        className="ui list"
        role="list"
      >
        <a
          className="item"
          href="link1"
          onClick={[Function]}
          role="listitem"
        >
          link1
        </a>
        <a
          className="item"
          href="link2"
          onClick={[Function]}
          role="listitem"
        >
          link2
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`should render nothing when the book does not contain attachments 1`] = `
Array [
  <div
    className="row"
  />,
  <div
    className="row"
  />,
]
`;
